--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,21 +1,46 @@
-.App {
-  text-align: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  min-height: 100vh;
-  min-width: 100vw;
+@import url('https://fonts.googleapis.com/css2?family=Moon+Dance&family=Poppins:ital,wght@1,100&display=swap');
+
+html {
+  min-height: 100vh;  
+  font-family: Lunacy;
 }
 
-/* #Page_1 {
-  min-height: 100vh;
-  min-width: 100vw;
-  background: #dedede70;
-  border: 1px dashed #72d3fe;
-  display: flex;
-  justify-content: center;
+.App {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.2fr 1.75fr 0.05fr;
+  gap: 0px 0px;
+  grid-template-areas:
+    'navbar'
+    'main'
+    'credits';
+  width: 80vw;
+  height: 95vh;
+  margin: 0 auto;
   align-items: center;
-  flex-direction: column;  
-} */
+  /* justify-items: center; */
+}
+
+.navbar {
+  margin: 1.25em 0 0.25em 0;
+  /* margin-top: 2em; */
+  grid-area: navbar;
+}
+.main {
+  grid-area: main;
+  
+}
+.credits {
+  grid-area: credits;
+}
+
+.lifewater {
+  font-family: "Moon Dance", cursive;
+  letter-spacing: 1.175em;
+  color: #73defe;
+  font-size: 32px;
+  text-align: center;
+}
 
 /* flexbox */           
 .flex { display: flex; }
@@ -24,84 +49,3 @@
 .justCenterAlignCenter { justify-content: center; align-items: center; }
 /* flexbox end */
 
-.Screen {
-  height: 500px;
-  width: 500px;
-  display: flex;
-  display: grid;
-  grid-area: screen;
-  justify-content: center;
-  align-content: space-around;
-  overflow-y: scroll;  
-}
-
-.Screen div:nth-child(odd) {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
-.Screen-List {
-}
-
-#Pokemon-Screen-Card {  
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.Pokemon-Screen-Data {  
-  list-style-type: none;
-  margin-top: 0.45em;
-  color: gray;  
-}
-
-.Pokemon-Screen-Img {
-  height: 95px;
-  width: 125px;
-}
-  
-.pokeball {
-  height: 50px; 
-  width: 50px;
-  justify-self: center;
-}
-.greatball {
-  height: 50px; 
-  width: 50px;
-  justify-self: center;
-}
-.ultraball {
-  height: 50px; 
-  width: 50px;
-  justify-self: center;
-}
-
-.Pokeball-Container  {
-  grid-area: pokeballs;
-}
-
-.gear { height: 50px; width: 50px; }
-
-.Container {
-  display: grid;
-  grid-template-columns: 500px;
-  grid-template-rows: auto;
-  justify-content: center;
-  align-content: center;
-  grid-template-areas: 
-    "screen"
-    "pokeballs" "pokeballs" "pokeballs";    
-}
-
-.Intro-Buttons {
-  border-radius: 50%;
-  height: 45px;
-  width: 45px;
-  margin: 0 0.5em;
-}
-
-.Bg-Cover-noRepeat {
-  background-size: cover;
-  background-repeat: no-repeat;
-}
