--- a/client/src/components/elements/LogInOutGoogle/LoginOutGoogle.css
+++ b/client/src/components/elements/LogInOutGoogle/LoginOutGoogle.css
@@ -80,32 +80,35 @@ input:focus {
   border: 1px dashed #72d3fe;
 }
 
-#invisible { color: transparent; }
-#bluespan { color: #72d3fe; }
-#gspan { color: #4285f4; }
-#red_o_span { color: #EA4335; }
-#yellow_o_span { color: #FBBC05; }
-#lil_g_span { color: #4285f4; }
-#l_span { color: #34A853}
-#e_span { color: #EA4335; }
+#invisible { color: transparent; margin: 0; padding: 0; font-weight: bolder; }
+#bluespan { color: #72d3fe; margin: 0; padding: 0; font-weight: bolder; }
+#gspan { color: #4285f4; margin: 0; padding: 0; }
+#red_o_span { color: #EA4335; margin: 0; padding: 0; }
+#yellow_o_span { color: #FBBC05; margin: 0; padding: 0; }
+#lil_g_span { color: #4285f4; margin: 0; padding: 0; }
+#l_span { color: #34A853; margin: 0; padding: 0; } 
+#e_span { color: #EA4335; margin: 0; padding: 0; }
 
-.googleLinkBtnClass {
-  border: 5px solid hotpink;
-}
+.googleLinkBtnClass { border: 5px solid hotpink; }
 
-#google-link-btn {
-  /* display: grid; */
-  /* grid-template-columns: 30% 30%; */
-  width: 50%;
+#google-link-btn {  
+  width: 75%;
   justify-content: space-between;
   align-items: center;
-  /* border: 5px solid orange; */
 }
-
 
 h1 { color: silver; }     h1:hover { font-weight: bolder;}
 
-pre {
+#poppinsLight {
   font-size: 14px;
   font-family: 'Poppins', sans-serif;
+  font-weight: 100;
+  font-style: italic;
+}
+
+#poppinsFat {
+  font-size: 16px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 300;
+  font-style: italic;
 }
