--- a/client/src/components/elements/Settings/settings.css
+++ b/client/src/components/elements/Settings/settings.css
@@ -26,7 +26,7 @@ form {
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  border-bottom: 5px solid #83d9fe;
+  border-bottom: 5px solid #dedede70;
   padding-bottom: 10px;
   margin: 10px 0;
 }
@@ -48,11 +48,14 @@ form {
 ::-webkit-scrollbar-thumb {
   background: #dedede70;
   width: 20px;
+  position: relative;
+  margin-left: 200px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #98ddfc;
+
 }
 
 ::-webkit-scrollbar-button {
