--- a/client/src/components/elements/SignupInputs/signupinput.css
+++ b/client/src/components/elements/SignupInputs/signupinput.css
@@ -2,12 +2,16 @@
     margin: 0 auto;
 }
 
-.SignupInput-Container > input {
+ input {
     border: transparent;
 }
 
 input:focus {
     border: 1px dashed #73defe;
+}
+
+#password {
+  color: #73defe;
 }
 
 /* border: 1px dashed #72d3fe; */
