--- a/client/src/components/elements/Navbar/navbar.css
+++ b/client/src/components/elements/Navbar/navbar.css
@@ -9,8 +9,13 @@
     height: 50px;
     width: 50px;
     margin: 0 0.25em;
-    border: 1px dashed #72d3fe;
     border-radius: 50%;
+    border: none;
+  }
+    
+  .navbar-container img:hover {
+    border: 1px dashed #72d3fe;
+    cursor: pointer;
   }
 
   .middle {
@@ -28,8 +33,6 @@
       height: 100px;
       width: 100px;
       position: relative;
-      left: -25%;
-  
+      left: -25%;  
     }
   }
-  
