fix issue #161 [12:15am]

--- a/client/src/components/elements/Navbar/navbar.css
+++ b/client/src/components/elements/Navbar/navbar.css
@@ -36,3 +36,25 @@
       left: -25%;  
     }
   }
+
+  #msg-bottle {
+    animation-name: Boop;
+    animation-duration: 4s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+  }
+
+  @keyframes Boop {
+    0% {
+      transform: rotate(0deg);
+    }
+    25% {
+      transform: rotate(65deg);
+    }
+    75% {
+      transform: rotate(-65deg);
+    }
+    100% {
+      transform: rotate(0deg);
+    }
+  }
