--- a/client/src/components/elements/MeIcon/meicon.css
+++ b/client/src/components/elements/MeIcon/meicon.css
@@ -19,7 +19,7 @@
     /* grid-gap: 10em; */
   }
 
-  .MeIcon-Container :nth-child(-n+2):hover { border: 1px dashed #73defe; }
+  /* .MeIcon-Container :nth-child(-n+2):hover { border: 1px dashed #73defe; } */
   
   .Cont {
     display: grid;
@@ -31,9 +31,14 @@
   }
   
   .Left-Cont {
-
-    
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;  
   }
+
+  .Left-Cont:hover { border: 1px dashed #73defe; }
   
   /* .Right-Cont {
     height: 500px;
@@ -51,7 +56,46 @@
     grid-gap: 1em;
   }
 
+  .Right-Cont:hover { border: 1px dashed #73defe; }
+
 
 img { height: 50px; width: 50px; border: none; }
 
-img:hover { border: 1px dashed #73defe }
+.Move-Boat { animation-name: DriveBoat; animation-duration: 6s; animation-timing-function: ease-in-out; animation-iteration-count: infinite; }
+.Move-BoatR { animation-name: DriveBoatR; animation-duration: 4s; animation-timing-function: ease-in-out; animation-iteration-count: infinite; }
+
+@keyframes DriveBoat {
+  0% {
+    left: 0;
+  }
+  25% {
+    margin-left: 50px;
+    /* border: 5px solid hotpink;   */
+  }
+  50% {
+    margin-left: -100px;
+    /* border: 5px solid hotpink;   */
+  }
+  75% {
+    margin-left: 100px;
+    /* border: 5px solid hotpink;   */
+  }
+  100% {
+    margin-left: -50px;
+    /* border: 5px solid orange; */
+  }
+}  
+
+@keyframes DriveBoatR {
+  0% {
+    left: 0;
+  }
+  50% {
+    left: calc(100% - 7em);
+    margin-left: -50px;
+  }
+  100% {
+    left: 0;
+    margin-left: 0px;
+  }
+}
