--- a/client/src/components/elements/MeIcon/meicon.css
+++ b/client/src/components/elements/MeIcon/meicon.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Moon+Dance&family=Poppins:ital,wght@0,300;1,100&display=swap');
+
 * {
     text-align: center;
 }
@@ -10,23 +12,31 @@
     justify-content: center;
     align-items: center;
     background-color: #dedede70;
-    /* border: 1px dashed #72d3fe; */
     min-height: 50vh;
     min-width: 50vw;
     padding: 0.5em 0.5em;
-    grid-gap: 0.5em;
-    /* width: 100%; */
-    /* grid-gap: 10em; */
+    grid-gap: 0.5em;  
   }
 
-  /* .MeIcon-Container :nth-child(-n+2):hover { border: 1px dashed #73defe; } */
+  #column {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+  }
   
   .Cont {
     display: grid;
     align-items: center;
     justify-content: center;
     margin: 0 1em;
-    /* border: 1px dashed #73defe; */
     min-height: 50vh;
   }
   
@@ -36,16 +46,7 @@
     justify-content: center;
     background-repeat: no-repeat;
     background-size: 100% 100%;  
-  }
-
-  .Left-Cont:hover { border: 1px dashed #73defe; }
-  
-  /* .Right-Cont {
-    height: 500px;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-gap: 1em;
-  } */
+  } 
 
   .Right-Cont {
     display: grid;
@@ -61,6 +62,14 @@
 
 img { height: 50px; width: 50px; border: none; }
 
+  pre {
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 100;
+    font-style: italic;
+    color: silver;
+  }
+
 .Move-Boat { animation-name: DriveBoat; animation-duration: 6s; animation-timing-function: ease-in-out; animation-iteration-count: infinite; }
 .Move-BoatR { animation-name: DriveBoatR; animation-duration: 4s; animation-timing-function: ease-in-out; animation-iteration-count: infinite; }
 
@@ -70,19 +79,15 @@ img { height: 50px; width: 50px; border: none; }
   }
   25% {
     margin-left: 50px;
-    /* border: 5px solid hotpink;   */
   }
   50% {
     margin-left: -100px;
-    /* border: 5px solid hotpink;   */
   }
   75% {
     margin-left: 100px;
-    /* border: 5px solid hotpink;   */
   }
   100% {
     margin-left: -50px;
-    /* border: 5px solid orange; */
   }
 }  
 
@@ -97,5 +102,34 @@ img { height: 50px; width: 50px; border: none; }
   100% {
     left: 0;
     margin-left: 0px;
+  }
+}
+
+.psiHoverAnimation {
+  animation-name: VerticalBoopFake;
+  animation-duration: 3s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+  position: relative;
+}
+
+@keyframes VerticalBoopFake {
+  0% {
+    top: -5px;
+  }
+  25% {
+    top: 0px;  
+  }
+  50% {
+    top: 5px;
+  }
+  50% {
+    top: -5px;
+  }
+  75% {
+    top: 5px;
+  }
+  100% {
+    top: 0px;
   }
 }
