can influence {font-weight} w/ :focus for <input> [11:37pm]

--- a/client/src/components/elements/SignupInputs/signupinput.css
+++ b/client/src/components/elements/SignupInputs/signupinput.css
@@ -4,27 +4,14 @@
 
  input {
     border: transparent;
+    height: 2em;
 }
 
 input:focus {
     border: 1px dashed #73defe;
+    font-weight: bolder;
 }
 
 #password {
-  color: #73defe;
+    color: #73defe;
 }
-
-/* border: 1px dashed #72d3fe; */
-/* margin-top: 0.55em; */
-
-/* input {
-    height: 2vw;
-    width: 12vw;
-    background-color: #dedede70;
-    color: silver;
-    text-align: center;
-  }
-  
-  input:focus {
-    border: 1px dashed #72d3fe;
-  } */
